--- a/book/readFrontend/templates/pc/common/bookTop.ejs
+++ b/book/readFrontend/templates/pc/common/bookTop.ejs
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-    <title><%= title%></title>
+    <title>
+        <%= title%>
+    </title>
     <meta name="keywords" content="<%= keywords%>" />
     <meta name="description" content="<%= description%>" />
     <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
@@ -18,7 +20,9 @@
     <meta property="og:novel:update_time" content="<%= book.lastUpdatedAt%>" />
     <meta property="og:novel:latest_chapter_name" content="<%= lastChapterName%>" />
     <meta property="og:novel:latest_chapter_url" content="<%= lastChapterUrl%>" />
-    <link rel="stylesheet" type="text/css" href="/static/src/css/common.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/static/src/css/style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="/static/src/css/common.css" /> -->
 </head>
 
 <body>
