--- a/book/readFrontend/templates/pc/home.ejs
+++ b/book/readFrontend/templates/pc/home.ejs
@@ -8,7 +8,7 @@
                 <div class="col-xs-12 col-sm-6 book-item-1">
                     <div class="book-image">
                         <a href="/book/<%= book.bookId%>">
-                            <img onerror="src='/images/nopic.gif'" src="<%= book.cover%>" alt="<%= book.title%>"></a>
+                            <img onerror="src='/static/src/images/noimg.jpg'" src="<%= book.cover%>" alt="<%= book.title%>"></a>
                     </div>
                     <dl>
                         <dt>
@@ -87,7 +87,7 @@
                     <div class="book-item-3">
                         <div class="book-image">
                             <a href="/book/<%= book.bookId%>">
-                                <img onerror="src='/images/nopic.gif'" src="<%= book.cover%>" alt="重返1988"></a>
+                                <img onerror="src='/static/src/images/noimg.jpg'" src="<%= book.cover%>" alt="重返1988"></a>
                         </div>
                         <dl>
                             <dt>
