--- a/book/readFrontend/templates/pc/book.ejs
+++ b/book/readFrontend/templates/pc/book.ejs
@@ -1,65 +1,98 @@
 <%- include('common/bookTop', {}); %>
-<%- include('common/pageHeader', {}); %>
-<div class="">
-    <div class="hot_sale">
-        <div class="bookimg">
-            <img src="<%= book.cover%>">
-        </div>
-        <div class="bookinfo">
-            <p class="title">
+<%- include('common/mainHeader', {}); %>
+<div class="container">
+    <div class="row">
+        <ol class="col-xs-12 breadcrumb">
+            <!-- <li><a href="/">
+                    <%= branchInfo.shorttitle%></a></li> -->
+            <li><a href="/category/<%= book.categoryId%>/1">
+                    <%= book.categoryName%></a></li>
+            <li class="active">
                 <%= book.title%>
-            </p>
-            <p class="author">作者：
-                <%= book.writer%>
-            </p>
-            <p class="author">类别：
-                <%= book.categoryName%>
-            </p>
-            <p class="author">状态：
-                <%= book.publishStatus == 1?'连载中':'完成'%>
-            </p>
-            <p class="author">更新：
-                <%= book.lastUpdatedAt%>
-            </p>
+            </li>
+        </ol>
+        <div class="col-xs-12 border book-list-box" style="margin-top: 0">
+            <div class="book-list" style="padding-top: 15px;">
+                <div class="book-item-6 row">
+                    <div class="book-image col-md-2 col-xs-4">
+                        <img onerror="src='/images/nopic.gif'" src="<%= book.cover%>" alt="<%= book.title%>">
+                    </div>
+                    <dl class="col-md-10 col-xs-8" style="padding-right: 0;">
+                        <dt>
+                            <h2 class="book-title">
+                                <%= book.title%>
+                            </h2>
+                        </dt>
+                        <dd>
+                            作&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;者：
+                            <span class="book-author">
+                                <%= book.writer%> </span>
+                        </dd>
+                        <dd>
+                            类&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别：
+                            <span class="book-author">
+                                <%= book.categoryName%> </span>
+                        </dd>
+                        <dd>
+                            最后更新：
+                            <span class="book-author">
+                                <%= book.lastUpdatedAt.split(" ")[0]%> </span>
+                        </dd>
+                        <dd>
+                            <% if(book.lastChapter){%>
+                            最新章节：
+                            <span class="book-new-chapter"><a href="/book/<%= book.bookId%>/<%= book.lastChapter.number%>">
+                                    <%= book.lastChapter.title%></a></span>
+                            <% } %>
+                        </dd>
+                        <dd class="hidden-xs hidden-sm">
+                            操&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;作：
+                            <span class="book-operate-box">
+                                <a href="/book/<%= book.bookId%>/1">开始阅读</a>
+                                <a href="/book/<%= book.bookId%>/mulu" class="btn_toBookShelf">完整目录</a>
+                                <a href="/bookshelf" class="btn_toMyBook">我的书架</a>
+                            </span>
+                        </dd>
+                        <dd class="book-abstract hidden-xs hidden-sm">
+                            <span>
+                                <%= book.abstractContent?book.abstractContent.replace(/\\n/g, '').replace(/\s+/g, ''):''%></span>
+                        </dd>
+                    </dl>
+                    <div class="col-xs-12 hidden-mg hidden-lg padding-0">
+                        <div class="book-operate-box text-center">
+                            <a href="/book/<%= book.bookId%>/1">开始阅读</a>
+                            <a href="/book/<%= book.bookId%>/mulu" class="btn_toBookShelf">完整目录</a>
+                            <a href="/bookshelf" class="btn_toMyBook">我的书架</a>
+                        </div>
+                        <div class="book-abstract">
+                            <%= book.abstractContent?book.abstractContent.replace(/\\n/g, '').replace(/\s+/g, ''):''%>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="synopsisArea">
-        <a href="/book/<%= book.bookId%>/1">开始阅读</a>
-        <a href="/book/<%= book.bookId%>/mulu" class="btn_toBookShelf">完整目录</a>
-        <a href="/bookshelf" class="btn_toMyBook">我的书架</a>
-    </div>
-    <% if(abstractContent){ %>
-    <p class="book_detail_review">
-        <%= '简介：'+abstractContent%>
-    </p>
-    <% } %>
-</div>
-<div class="recommend">
-    <div class="tab-nav">
-        <a class="tab-nav-cur">最新章节</a>
-    </div>
-    <div id="chapterlist" class="directoryArea">
-        <% lastChapters.forEach(function(chapter){ %>
-        <a class="chapter" href="/book/<%= chapter.bookId%>/<%= chapter.number%>">
-            <%= chapter.title%></a>
-        <% }); %>
-    </div>
-    <!-- <div class="tab-nav">
-        <a href="/book/<%= book.bookId%>/mulu">查看全部章节</a>
-    </div> -->
-</div>
-<div class="recommend">
-    <div class="tab-nav">
-        <a class="tab-nav-cur">前十章</a>
-    </div>
-    <div id="chapterlist" class="directoryArea">
-        <% firstChapters.forEach(function(chapter){ %>
-        <a class="chapter" href="/book/<%= chapter.bookId%>/<%= chapter.number%>">
-            <%= chapter.title%></a>
-        <% }); %>
-    </div>
-    <div class="tab-nav">
-        <a href="/book/<%= book.bookId%>/mulu">点击查看全部章节</a>
+        <div class="col-xs-12 border book-list-box">
+            <h2 class="book-list-title">最新章节列表</h2>
+            <ul class="book-list row">
+                <% lastChapters.forEach(function(chapter){ %>
+                <li class="book-item-5 col-xs-12 col-sm-6 col-md-4">
+                    <span class="book-new-chapter"><a href="/book/<%= book.bookId%>/<%= chapter.number%>">
+                            <%= chapter.title%></a></span>
+                </li>
+                <% }); %>
+            </ul>
+        </div>
+        <div class="col-xs-12 border book-list-box">
+            <h2 class="book-list-title">全部章节列表</h2>
+            <ul class="book-list">
+                <% allChapters.forEach(function(chapter){ %>
+                <li class="book-item-5 col-xs-12 col-sm-6 col-md-4">
+                    <span class="book-new-chapter"><a href="/book/<%= book.bookId%>/<%= chapter.number%>">
+                            <%= chapter.title%></a></span>
+                </li>
+                <% }); %>
+            </ul>
+        </div>
     </div>
 </div>
 <%- include('common/footer', {}); %>
