--- a/book/readFrontend/templates/m/error.ejs
+++ b/book/readFrontend/templates/m/error.ejs
@@ -1,4 +1,15 @@
-<%- include('common/top', {}); %>
-<h2><%= message %></h2>
-<div><%= error%></div>
-<%- include('common/bottom', {}); %>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>出错了</title>
+</head>
+
+<body>
+    <h2>
+        <%= message %>
+    </h2>
+    <div>
+        <%= error%>
+    </div>
+    <%- include('common/bottom', {}); %>
